# Learning-Parametric-Koopman-Decompositions

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  test_gpu.ipynb
examples/: config_duffing.json  config_fhn.json  config_vdpm.json  evaluate_fhn_pde_Nx_10.ipynb  evaluate_high_u_fhn.ipynb  evaluate_vdpm.ipynb  generate_data_duffing.py  generate_data_fhn.py  generate_data_vdpm.py  kdv_mass_momentum_bilinear_mpc.ipynb  train_model_duffing.py  train_model_vdpm.py
examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  duffing_ori_train_by_param-checkpoint.ipynb  duffing_params-checkpoint.ipynb  evaluate_mixed_edmd-checkpoint.ipynb  evaluate_vdpm-checkpoint.ipynb  fhn_generate_data-checkpoint.ipynb  fhn_pde-checkpoint.ipynb  fhn_pde_Nx_20-checkpoint.ipynb  fhn_pde_Nx_30-checkpoint.ipynb  fhn_pde_Nx_40-checkpoint.ipynb  fhn_pde_Nx_50-checkpoint.ipynb  high_u_fhn_pde_Nx_10-checkpoint.ipynb  high_u_fhn_pde_Nx_20-checkpoint.ipynb  kdv-Copy1-checkpoint.ipynb  kdv-checkpoint.ipynb  kdv_evaluation-checkpoint.ipynb  kdv_evaluation_mass_momentum-checkpoint.ipynb  kdv_evaluation_mass_momentum_mpc-checkpoint.ipynb  kdv_evaluation_mass_momentum_mpc_u-checkpoint.ipynb  kdv_mass_linear-checkpoint.ipynb  kdv_mass_momentum_bilinear_mpc-checkpoint.ipynb  kdv_mass_momentum_linear_mpc-checkpoint.ipynb  kdv_mass_momentum_pk_Klayer-checkpoint.ipynb  kdv_mass_momentum_pk_mpc-checkpoint.ipynb  kdv_mass_pk-checkpoint.ipynb  mixed_duffing_demo-checkpoint.ipynb  toluene_demo-checkpoint.ipynb  (+16 more)
examples_torch/: test_generate_vdpm_data.ipynb  test_train_vdpm_torch.ipynb
(+415 files in other folders)
