[metadata]
name = koopman
version = 0.0.0
license = MIT
description = Learning Parametric Koopman Decompositions
long_description = file: README.md
author = MLDS-NUS
classifiers=
    Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    tensorflow
    scipy
    numpy

[options.packages.find]
where=src